Added proper group detection